Update to Java 16 and Spring Boot 2.4.5