@@ -1,4 +1,4 @@
-FROM adoptopenjdk:15
+FROM adoptopenjdk:16
 
 RUN apt update && apt install -y libsodium23
 
@@ -7,4 +7,4 @@ ADD target/kmdah.jar /mangahome/kmdah.jar
 
 STOPSIGNAL 15
 
-CMD [ "java", "-jar", "--enable-preview", "/mangahome/kmdah.jar" ]
+CMD [ "java", "-jar", "/mangahome/kmdah.jar" ]
